# OpenNI2

./: CMakeLists.txt  libopenni2.pc.in
